# filter-design

./: .clangd  .gitignore  CMakeLists.txt  OnePole.cpp  README.md  WPILogDecoder.h  WpilogReader.cpp  desktop.ini  vcpkg.json
.cmake/api/v1/reply/: cache-v2-aeb0579cf94c16755344.json  cmakeFiles-v1-5fbeb46411aa05ce256e.json  codemodel-v2-08e77e0627c6c94c3cc6.json  index-2025-05-27T15-34-45-0296.json  target-ALL_BUILD-Debug-692f9291be5a1bcf97d5.json  target-ZERO_CHECK-Release-48cd29b3fcda904500c3.json  target-filter_design-Debug-2d3ccf9d896c8061ee8f.json  target-filter_design-MinSizeRel-e7d44e8036f81aa9cd8b.json  target-filter_design-RelWithDebInfo-c472dbf059b30ff994a4.json  target-filter_design-Release-7912c609997185b87f5b.json  target-imgui-Debug-7b9b1abe95f786458301.json  target-imgui-MinSizeRel-2f43456726c8cfb9700f.json  target-imgui-RelWithDebInfo-3831aba973428d738cac.json  target-imgui-Release-fcdf59d736b4a08379ca.json  target-imnodes-Debug-d795225f642142cde19d.json  target-imnodes-MinSizeRel-1b27fd95d4508fd44810.json  target-imnodes-RelWithDebInfo-d34a6cb5fdff7abab199.json  target-imnodes-Release-3fe78a881b2c2a2b2da2.json
include/: LogLoader.h
include/data/: DataSource.h  WpiLogDataSource.hpp
include/filter/: ButterworthFilter.h  ButterworthFilter.hpp  Filter.h  Filter.hpp  FilterBase.hpp  InputNodes.hpp  LogFileParser.hpp  LowPassFilter.h  LowPassFilter.hpp
include/pipeline/: FilterPipeline.h  FilterPipeline.hpp
include/ui/: FilterDesignUI.h  FilterDesignUI.hpp
source/: Butterworth.cpp  LogLoader.cpp  WpilogReader.cpp  main.cpp
source/data/: WpiLogDataSource.cpp
source/filter/: ButterworthFilter.cpp  Filter.cpp  InputNodes.cpp  LogFileParser.cpp  LowPassFilter.cpp
source/pipeline/: FilterPipeline.cpp
source/ui/: FilterDesignUI.cpp  FilterDesignUI.h
src/: ReadData.cpp
